# alacritty

./: Cargo.toml
alacritty/: Cargo.toml
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: display.rs  lib.rs  window.rs
alacritty_terminal/src/config/: mod.rs  renderer.rs
alacritty_terminal/src/renderer/: generic.rs  mod.rs  runtime.rs
alacritty_terminal/src/vk_renderer/: mod.rs  swapchain_ext.rs  window_ext.rs
src/: display.rs  event.rs  window.rs
